// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetButtonPanels should render the WidgetButtonPanels and match snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-63q09u-MuiContainer-root"
    data-testid="WIDGET_BUTTON_PANELS_CONTAINER"
  >
    <div
      class="MuiBox-root css-9c42oi"
      data-testid="WIDGET_BUTTON_PANELS_PANEL_COMPONENToption1"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-10zsxzp-MuiTypography-root"
      >
        Label 1
      </h4>
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
        />
      </span>
    </div>
    <div
      class="MuiBox-root css-9c42oi"
      data-testid="WIDGET_BUTTON_PANELS_PANEL_COMPONENToption2"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-10zsxzp-MuiTypography-root"
      >
        Label 2
      </h4>
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
        />
      </span>
    </div>
    <div
      class="MuiBox-root css-9c42oi"
      data-testid="WIDGET_BUTTON_PANELS_PANEL_COMPONENToption3"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-10zsxzp-MuiTypography-root"
      >
        Label 3
      </h4>
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            checked=""
            class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WidgetButtonPanels should render with all switches off 1`] = `
<DocumentFragment>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-63q09u-MuiContainer-root"
    data-testid="WIDGET_BUTTON_PANELS_CONTAINER"
  >
    <div
      class="MuiBox-root css-9c42oi"
      data-testid="WIDGET_BUTTON_PANELS_PANEL_COMPONENToption1"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-10zsxzp-MuiTypography-root"
      >
        Label 1
      </h4>
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
        />
      </span>
    </div>
    <div
      class="MuiBox-root css-9c42oi"
      data-testid="WIDGET_BUTTON_PANELS_PANEL_COMPONENToption2"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-10zsxzp-MuiTypography-root"
      >
        Label 2
      </h4>
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
        />
      </span>
    </div>
    <div
      class="MuiBox-root css-9c42oi"
      data-testid="WIDGET_BUTTON_PANELS_PANEL_COMPONENToption3"
    >
      <h4
        class="MuiTypography-root MuiTypography-h4 css-10zsxzp-MuiTypography-root"
      >
        Label 3
      </h4>
      <span
        class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch-root"
      >
        <span
          class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase"
        >
          <input
            class="PrivateSwitchBase-input MuiSwitch-input css-1m9pwf3"
            type="checkbox"
          />
          <span
            class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
          />
        </span>
        <span
          class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;
